# coderca_tessa1

./: .dockerignore  .gitignore  ARCHITECTURE.md  Bargefile  Dockerfile  PLAN.md  README.md  pyproject.toml
config/: scoring.json
data/: users.json
src/coderca_tessa1/: benchmark_tokens.py  cli.py  copilot_client.py  dataset_loader.py  feed_agents.py  input_loader.py  orchestrator.py  preflight.py  runlog.py
src/coderca_tessa1/agents/: __init__.py  base.py  database.py  order.py
src/coderca_tessa1/context/architecture/: overview.md
src/coderca_tessa1/context/components/: order.md
src/coderca_tessa1/models/: __init__.py  feed.py
src/coderca_tessa1/scenarios/: base.py  s01_database_not_initialized.py
src/tessa1/: __init__.py  agent_selector.py  copilot_client.py  dataset_loader.py  feed_agents.py  orchestrator.py  tooling.py
src/tessa1/agents/: basket.py  catalog.py
src/tessa1/context/components/: basket.md  catalog.md  database.md
src/tessa1/models/: investigation.py
src/tessa1/scenarios/: __init__.py
tests/: test_cli.py  test_feed_inputs.py  test_feed_models.py  test_orchestrator.py  test_profile_agent.py  test_ranking_agent.py  test_synthesis_agent.py
tsg/bugs/: v0.1.0.md
