[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coderca_tessa1"
version = "0.1.0"
description = "Harness demo adapting the CodeRCA architecture to a feed retrieval workflow"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CodeRCA Contributors"}
]
keywords = ["ai", "agents", "rca", "incident-investigation", "observability", "sre"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "pandas>=2.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "github-copilot-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
coderca_tessa1 = "coderca_tessa1.cli:main"

[project.urls]
Homepage = "https://github.com/asbassan/coderca_tessa1"
Documentation = "https://github.com/asbassan/coderca_tessa1"
Repository = "https://github.com/asbassan/coderca_tessa1"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
